change user-info configuration

--- a/user-service.yaml
+++ b/user-service.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: user-info-service
+    name: user-service
   config:
     import: "optional:configserver:"
   jpa:
