Add debug in upload service

--- a/upload-service.yaml
+++ b/upload-service.yaml
@@ -25,3 +25,11 @@ spring:
 
 server:
   port: 9001
+
+logging:
+  level:
+    org:
+      springframework:
+        web:
+          filter:
+            CommonsRequestLoggingFilter: DEBUG
