--- a/order-service.yaml
+++ b/order-service.yaml
@@ -12,7 +12,7 @@ spring:
   jpa:
     show-sql: false
     open-in-view: false
-    database-platform: org.hibernate.dialect.PostgreSQL95Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: validate
     properties:
