--- a/user-info-service.yaml
+++ b/user-info-service.yaml
@@ -25,6 +25,12 @@ spring:
     password: password
     driver-class-name: org.postgresql.Driver
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+
 app:
   api:
     rest:
