update config. add new for review-service

--- a/review-service.yaml
+++ b/review-service.yaml
@@ -1,11 +1,15 @@
 server:
-  port: 8081
+  port: 8083
 
 spring:
   application:
-    name: order-service
+    name: review-service
+    url: /public/api/v1
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
   datasource:
-    url: jdbc:postgresql://172.17.0.1:5432/order_db
+    url: jdbc:postgresql://172.17.0.1:5432/review_db
     username: user
     password: password
     driver-class-name: org.postgresql.Driver
@@ -18,16 +22,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
-  jackson:
-    serialization:
-      fail-on-empty-beans: false
-    metrics:
-      tags:
-        application: ${spring.application.name}
-    server:
-      port: 8001
-      ssl:
-        enabled: false
 
 management:
   endpoints:
@@ -38,7 +32,7 @@ management:
     tags:
       application: ${spring.application.name}
   server:
-    port: 8002
+    port: 8003
     ssl:
       enabled: false
 
