--- a/upload-service.yaml
+++ b/upload-service.yaml
@@ -28,7 +28,14 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus, health
+        include: prometheus,health
+  metrics:
+    tags:
+      application: ${spring.application.name}
+  server:
+    port: 9001
+    ssl:
+      enabled: false
 
 logging:
   level:
