--- a/user-info-service.yaml
+++ b/user-info-service.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: user-info-service
   jpa:
-    show-sql: false
+    show-sql: true
     open-in-view: false
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
