--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -14,7 +14,7 @@ spring:
         - id: user-info-service-route
           uri: http://51.250.102.12:8080
           predicates:
-            - Path=/*/*/*/users, /*/*/*/users/{externalId}, /*/*/*/users/search, /*/*/*/users/signup, /*/*/*/token
+            - Path=/*/*/*/users, /*/*/*/users/{externalId}, /*/*/*/users/search, /*/*/*/users/signup
         - id: product-service-route
           uri: http://51.250.102.12:9090
           predicates:
