--- a/authorization-server.yaml
+++ b/authorization-server.yaml
@@ -10,8 +10,8 @@ app:
       redirect-success-login-uri: "http://51.250.102.12:7777/authorized"
       scope: read
     token-settings:
-      access-token-life-time-in-minutes: 3600
-      refresh-token-lifetime-in-minutes: 7200
+      access-token-life-time-in-minutes: 10080 # 7 days
+      refresh-token-lifetime-in-minutes: 11520 # 8 days
     data-provider-uri: "http://51.250.102.12:8080/private/api/v1/users/auth-details/"
 
 logging:
