--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -27,6 +27,10 @@ spring:
           uri: http://51.250.102.12:9001
           predicates:
               - Path=/*/*/*/upload, /*/*/*/download, /*/*/*/url, /*/*/*/delete, /*/*/*/urls
+        - id: auth-server
+          uri: http://51.250.102.12:9000
+          predicates:
+            - Path=/*/*/*/uaa/logout, /*/*/*/uaa/login
       default-filters:
         - TokenRelay=
         - RemoveRequestHeader=Cookie
