--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -19,6 +19,10 @@ spring:
           uri: http://51.250.102.12:9090
           predicates:
             - Path=/*/*/*/products, /*/*/*/products/{externalId}, /*/*/*/products/search, /*/*/*/*/*/products, /*/*/*/*/*/products/categories, /*/*/*/*/*/products/categories/**, /*/*/*/*/*/products/search/by-name
+        - id: seller-service-route
+          uri: http://51.250.102.12:8085
+          predicates:
+            - Path=/*/*/*/sellers, /*/*/*/sellers/{externalId}
         - id: favorite-service-route
           uri: http://51.250.102.12:8082
           predicates:
