add review service settings

--- a/review-service.yaml
+++ b/review-service.yaml
@@ -5,6 +5,8 @@ spring:
   application:
     name: review-service
     url: /public/api/v1
+  flyway:
+    enabled: false
   jackson:
     serialization:
       fail-on-empty-beans: false
@@ -22,20 +24,3 @@ spring:
     properties:
       hibernate:
         format_sql: true
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: prometheus,health
-  metrics:
-    tags:
-      application: ${spring.application.name}
-  server:
-    port: 8003
-    ssl:
-      enabled: false
-
-logging:
-  level:
-    org: INFO
