--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -30,11 +30,15 @@ spring:
         - id: upload-service-route
           uri: http://51.250.102.12:9001
           predicates:
-              - Path=/*/*/*/upload, /*/*/*/download, /*/*/*/url, /*/*/*/delete, /*/*/*/urls
+            - Path=/*/*/*/upload, /*/*/*/download, /*/*/*/url, /*/*/*/delete, /*/*/*/urls
         - id: auth-server
           uri: http://51.250.102.12:9000
           predicates:
             - Path=/*/*/*/uaa/logout, /*/*/*/uaa/login
+        - id: review-service
+            uri: http://127.0.0.1:8083
+            predicates:
+              - Path=/*/*/*/users/{userId}/reviews, /*/*/*/products/{productId}/reviews, /*/*/*/users/reviews/{reviewId}
       default-filters:
         - TokenRelay=
         - RemoveRequestHeader=Cookie
