fix review service settings

--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -19,7 +19,7 @@ spring:
           uri: http://51.250.102.12:9090
           predicates:
             - Path=/*/*/*/products, /*/*/*/products/{externalId}, /*/*/*/products/search, /*/*/*/*/*/products, /*/*/*/*/*/products/categories, /*/*/*/*/*/products/categories/**, /*/*/*/*/*/products/search/by-name
-        - id: seller-service-route
+        - id: seller-info-service
           uri: http://51.250.102.12:8085
           predicates:
             - Path=/*/*/*/sellers, /*/*/*/sellers/{externalId}
