--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -11,18 +11,14 @@ spring:
           uri: http://51.250.102.12:8081
           predicates:
             - Path=/*/*/*/orders, /*/*/*/orders/**
-        - id: user-info-service-route
+        - id: user-service-route
           uri: http://51.250.102.12:8080
           predicates:
             - Path=/*/*/*/users, /*/*/*/users/{externalId}, /*/*/*/users/search, /*/*/*/users/signup
         - id: product-service-route
           uri: http://51.250.102.12:9090
           predicates:
-            - Path=/*/*/*/products, /*/*/*/products/{externalId}, /*/*/*/*/*/products, /*/*/*/products/search, /*/*/*/*/*/products/categories, /*/*/*/*/*/products/categories/**, /*/*/*/*/*/products/search/by-name
-        - id: seller-info-service
-          uri: http://51.250.102.12:8085
-          predicates:
-            - Path=/*/*/*/sellers, /*/*/*/sellers/{externalId}
+            - Path=/*/*/*/products, /*/*/*/products/{externalId}, /*/*/*/products/search, /*/*/*/*/*/products, /*/*/*/*/*/products/categories, /*/*/*/*/*/products/categories/**, /*/*/*/*/*/products/search/by-name
         - id: favorite-service-route
           uri: http://51.250.102.12:8082
           predicates:
@@ -30,18 +26,9 @@ spring:
         - id: upload-service-route
           uri: http://51.250.102.12:9001
           predicates:
-            - Path=/*/*/*/upload, /*/*/*/download, /*/*/*/url, /*/*/*/delete, /*/*/*/urls
-        - id: auth-server
-          uri: http://51.250.102.12:9000
-          predicates:
-            - Path=/*/*/*/uaa/logout, /*/*/*/uaa/login
-        - id: review-service
-          uri: http://51.250.102.12:8083
-          predicates:
-             - Path=/*/*/*/users/{userId}/reviews, /*/*/*/products/{productId}/reviews, /*/*/*/users/reviews/{reviewId}
+              - Path=/*/*/*/upload, /*/*/*/download, /*/*/*/url, /*/*/*/delete, /*/*/*/urls
       default-filters:
-        - TokenRelay=
-        - RemoveRequestHeader=Cookie
+        - AuthFilter
 
   security:
     oauth2:
@@ -62,3 +49,43 @@ spring:
             authorization-uri: "http://51.250.102.12:9000/oauth2/authorize"
             jwk-set-uri: "http://51.250.102.12:9000/oauth2/jwks"
             user-info-uri: "http://51.250.102.12:9000/userinfo"
+
+management:
+  endpoint:
+    gateway:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: gateway
+
+application:
+  security:
+    white-list:
+      # users-api
+      - url: /*/*/*/users/signup
+        methods:
+          - POST
+      # products-api
+      - url: /*/*/*/products/{externalId}
+        methods:
+          - GET
+      - url: /*/*/*/products
+        methods:
+          - GET
+      - url: /*/*/*/products/search
+        methods:
+          - GET
+      - url: /*/*/*/*/*/products/categories
+        methods:
+          - GET
+      - url: /*/*/*/*/*/products/categories/**
+        methods:
+          - GET
+      - url: /*/*/*/*/*/products/search/by-name
+        methods:
+          - GET
+
+logging:
+  level:
+    org: INFO
