update while list

--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -66,10 +66,12 @@ application:
       - url: /*/*/*/users/signup
         methods:
           - POST
+          - OPTIONS
       # products-api
       - url: /*/*/*/products/{externalId}
         methods:
           - GET
+          - OPTIONS
       - url: /*/*/*/products
         methods:
           - GET
