update while list

--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -65,6 +65,7 @@ application:
       # users-api
       - url: /*/*/*/users/signup
         methods:
+          - GET
           - POST
           - OPTIONS
       # products-api
