--- a/favorites-service.yaml
+++ b/favorites-service.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8083
 
 spring:
   application:
@@ -11,13 +11,13 @@ spring:
       fail-on-empty-beans: false
 
   flyway:
-    baseline-on-migrate: true
+    enabled: false
 
   jpa:
     database: POSTGRESQL
-    show-sql: false
+    show-sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
