--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -6,6 +6,8 @@ spring:
     name: api-gateway-service
   cloud:
     gateway:
+      globalcors:
+        add-to-simple-url-handler-mapping: true
       routes:
         - id: order-service-route
           uri: http://51.250.102.12:8081
