add dedupe filter

--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -8,6 +8,12 @@ spring:
     gateway:
       globalcors:
         add-to-simple-url-handler-mapping: true
+        cors-configurations:
+          '[/**]':
+          allowed-origins: "*"
+          allowed-methods: "*"
+          allowed-headers: "*"
+          allow-credentials: true
       routes:
         - id: order-service-route
           uri: http://51.250.102.12:8081
@@ -31,6 +37,7 @@ spring:
               - Path=/*/*/*/upload, /*/*/*/download, /*/*/*/url, /*/*/*/delete, /*/*/*/urls
       default-filters:
         - AuthFilter
+        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_UNIQUE
 
   security:
     oauth2:
