--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -32,6 +32,7 @@ spring:
       default-filters:
         - AuthFilter
         - AddResponseHeader=Access-Control-Allow-Origin, *
+        - AddResponseHeader=Access-Control-Allow-Headers, Content-Type
         - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_UNIQUE
 
   security:
