update white list

--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -68,7 +68,7 @@ application:
   security:
     white-list:
       # users-api
-      - url: /*/*/*/users/signup
+      - url: /*/*/*/registration/users
         methods:
           - GET
           - POST
