enable logs for sql statements

--- a/product-service.yaml
+++ b/product-service.yaml
@@ -20,7 +20,7 @@ spring:
 
   jpa:
     database: POSTGRESQL
-    show-sql: false
+    show-sql: true
     hibernate:
       ddl-auto: validate
     properties:
