--- a/product-service.yaml
+++ b/product-service.yaml
@@ -12,6 +12,9 @@ spring:
     seller:
       url: /public/api/v1/sellers/
 
+  kafka:
+    bootstrap-servers: 172.17.0.1:9092
+
   datasource:
     url: jdbc:postgresql://158.160.27.104:5432/product_db
     username: user
