--- a/product-service.yaml
+++ b/product-service.yaml
@@ -25,7 +25,7 @@ spring:
     database: POSTGRESQL
     show-sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     properties:
       hibernate:
         generate_statistics: true
