update redis config

--- a/user-service.yaml
+++ b/user-service.yaml
@@ -20,7 +20,7 @@ spring:
     type: redis
   data:
     redis:
-      host: 172.17.0.1
+      host: 158.160.27.104
       port: 6379
       password: password
 
@@ -44,13 +44,6 @@ management:
       enabled: false
 
 app:
-  api:
-    rest:
-      connection-timeout-in-ms: 1000
-      read-connection-timeout-in-ms: 1000
-      geocoder:
-        url: https://catalog.api.2gis.com/3.0/items/geocode?q=%s&fields=items.point&key=%s
-        api-key: ${api-key:ruogpy7686}
   validation:
     error-info:
       BLANK_FIRST_NAME_VALIDATION_ERROR_CODE: 'Firstname can not be blank'
@@ -71,6 +64,4 @@ app:
       INCORRECT_SOCIAL_NETWORK_ERROR_CODE: 'Incorrect social network: %s'
 
 logging:
-  level:
-    com.marketplace: DEBUG
-    org.springframework: DEBUG
+  level: INFO
