--- a/product-service.yaml
+++ b/product-service.yaml
@@ -43,7 +43,7 @@ spring:
     database: POSTGRESQL
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     properties:
       hibernate:
         generate_statistics: true
