--- a/seller-info-service.yaml
+++ b/seller-info-service.yaml
@@ -23,3 +23,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://172.17.0.1:9000/oauth2/jwks
