--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -22,7 +22,7 @@ spring:
           predicates:
             - Path=/*/*/*/sellers, /*/*/*/sellers/{sellerId}
         - id: product-service-route
-          uri: http://172.17.0.1:9090
+          uri: http://51.250.102.12:9090
           predicates:
             - Path=/*/*/*/products/{productId},
                 /*/*/*/sellers/{sellerId}/products,
@@ -107,5 +107,4 @@ application:
         methods: GET
 
 logging:
-  level:
-    DEBUG
+  level: DEBUG
