--- a/product-service.yaml
+++ b/product-service.yaml
@@ -57,3 +57,13 @@ spring:
       host: 158.160.27.104
       port: 6379
       database: 0
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://127.0.0.1:9000/oauth2/jwks
+
+logging:
+  level:
+    web: DEBUG
