--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -22,7 +22,7 @@ spring:
         - id: product-service-route
           uri: http://51.250.102.12:9090
           predicates:
-            - Path=/*/*/*/*/*/products, /*/*/*/*/*/products/categories, /*/*/*/*/*/products/categories/**, /*/*/*/*/*/products/search/by-name, /*/*/*/*/{sellerId}/products, /*/*/*/*/{sellerId}/products/**, /*/*/*/*/{sellerId}/products/{productId}, /*/*/*/*/{sellerId}/products/{productId}/**, /*/*/*/*/{sellerId}/products/special-prices/{specialPriceId}, /*/*/*/*/{sellerId}/products/characteristics/{characteristicId}, /*/*/*/*/{sellerId}/archive/products
+            - Path=/*/*/*/product-previews, */*/*/*/*/products, /*/*/*/*/*/products/categories, /*/*/*/*/*/products/categories/**, /*/*/*/*/*/products/search/by-name, /*/*/*/*/{sellerId}/products, /*/*/*/*/{sellerId}/products/**, /*/*/*/*/{sellerId}/products/{productId}, /*/*/*/*/{sellerId}/products/{productId}/**, /*/*/*/*/{sellerId}/products/special-prices/{specialPriceId}, /*/*/*/*/{sellerId}/products/characteristics/{characteristicId}, /*/*/*/*/{sellerId}/archive/products
         - id: favorite-service-route
           uri: http://172.17.0.1:8082
           predicates:
