endpoint - create seller add to white list

--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -86,6 +86,9 @@ application:
         methods: GET
       - url: /*/*/*/types/{typeId}/rooms
         methods: GET
+      # seller-api
+      -url: /*/*/*/sellers
+      - methods: POST
 
 logging:
   level:
