--- a/seller-info-service.yaml
+++ b/seller-info-service.yaml
@@ -29,3 +29,16 @@ spring:
       resourceserver:
         jwt:
           jwk-set-uri: http://172.17.0.1:9000/oauth2/jwks
+
+management:
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
+  zipkin:
+    tracing:
+      endpoint: http://158.160.27.104:9411/api/v2/spans
