--- a/review-service.yaml
+++ b/review-service.yaml
@@ -24,3 +24,23 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+management:
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+  metrics:
+    tags:
+      application: ${spring.application.name}
+  server:
+    port: 8002
+    ssl:
+      enabled: false
+  zipkin:
+    tracing:
+      endpoint: http://158.160.27.104:9411/api/v2/spans
