--- a/authorization-server.yaml
+++ b/authorization-server.yaml
@@ -1,6 +1,10 @@
 server:
   port: 9000
 
+spring:
+  application:
+    name: authorization-server
+
 app:
   security:
     client-settings:
@@ -14,6 +18,26 @@ app:
       refresh-token-lifetime-in-minutes: 11520 # 8 days
     user-data-provider-url: "http://172.17.0.1:8080/private/api/v1"
     seller-data-provider-url: "http://172.17.0.1:8085/private/api/v1"
+
+management:
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+  metrics:
+    tags:
+      application: ${spring.application.name}
+  server:
+    port: 8010
+    ssl:
+      enabled: false
+  zipkin:
+    tracing:
+      endpoint: http://158.160.27.104:9411/api/v2/spans
 
 logging:
   level:
