--- a/favorites-service.yaml
+++ b/favorites-service.yaml
@@ -28,3 +28,23 @@ spring:
     username: user
     password: password
     driverClassName: org.postgresql.Driver
+
+management:
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+  metrics:
+    tags:
+      application: ${spring.application.name}
+  server:
+    port: 8003
+    ssl:
+      enabled: false
+  zipkin:
+    tracing:
+      endpoint: http://158.160.27.104:9411/api/v2/spans
