--- a/product-service.yaml
+++ b/product-service.yaml
@@ -64,6 +64,26 @@ spring:
         jwt:
           jwk-set-uri: http://51.250.102.12:9000/oauth2/jwks
 
+management:
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+  metrics:
+    tags:
+      application: ${spring.application.name}
+  server:
+    port: 8020
+    ssl:
+      enabled: false
+  zipkin:
+    tracing:
+      endpoint: http://158.160.27.104:9411/api/v2/spans
+
 logging:
   level:
     web: DEBUG
