--- a/seller-info-service.yaml
+++ b/seller-info-service.yaml
@@ -38,7 +38,14 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus
+        include: prometheus, health
+  metrics:
+    tags:
+      application: ${spring.application.name}
+  server:
+    port: 8005
+    ssl:
+      enabled: false
   zipkin:
     tracing:
       endpoint: http://158.160.27.104:9411/api/v2/spans
