--- a/user-service.yaml
+++ b/user-service.yaml
@@ -31,10 +31,14 @@ spring:
     driver-class-name: org.postgresql.Driver
 
 management:
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1
   endpoints:
     web:
       exposure:
-        include: prometheus,health
+        include: prometheus, health
   metrics:
     tags:
       application: ${spring.application.name}
@@ -42,6 +46,9 @@ management:
     port: 8000
     ssl:
       enabled: false
+  zipkin:
+    tracing:
+      endpoint: http://158.160.27.104:9411/api/v2/spans
 
 app:
   validation:
