--- a/upload-service.yaml
+++ b/upload-service.yaml
@@ -2,27 +2,110 @@ server:
   port: 9001
 
 application:
-  extension:
-    jpg:
-      max_file_size_in_bytes: 153600
-    png:
-      max_file_size_in_bytes: 1000000
-    pdf:
-      max_file_size_in_bytes: 50000
   validation:
-    maximum_files_count: 5
+  extensions:
+      jpg:
+        max_file_size_in_bytes: 10_485_760 #10 mb
+        file_types:
+          - AVATAR
+          - PRODUCT
+          - REVIEW
+      jpeg:
+        max_file_size_in_bytes: 10_485_760 #10 mb
+        file_types:
+          - AVATAR
+          - PRODUCT
+          - REVIEW
+      png:
+        max_file_size_in_bytes: 10_485_760 #10 mb
+        file_types:
+          - AVATAR
+          - PRODUCT
+          - REVIEW
+      heif:
+        max_file_size_in_bytes: 10_485_760 #10 mb
+        file_types:
+          - AVATAR
+          - PRODUCT
+          - REVIEW
+      heic:
+        max_file_size_in_bytes: 10_485_760 #10 mb
+        file_types:
+          - AVATAR
+          - PRODUCT
+          - REVIEW
+      gif:
+        max_file_size_in_bytes: 10_485_760 #10 mb
+        file_types:
+          - AVATAR
+          - PRODUCT
+          - REVIEW
+      webp:
+        max_file_size_in_bytes: 10_485_760 #10 mb
+        file_types:
+          - AVATAR
+          - PRODUCT
+          - REVIEW
+      mov:
+        max_file_size_in_bytes: 104_857_600 #100 mb
+        file_types:
+          - PRODUCT
+          - REVIEW
+      mp4:
+        max_file_size_in_bytes: 104_857_600 #100 mb
+        file_types:
+          - PRODUCT
+          - REVIEW
+      mkv:
+        max_file_size_in_bytes: 104_857_600 #100 mb
+        file_types:
+          - PRODUCT
+          - REVIEW
+      m4v:
+        max_file_size_in_bytes: 104_857_600 #100 mb
+        file_types:
+          - PRODUCT
+          - REVIEW
+      avi:
+        max_file_size_in_bytes: 104_857_600 #100 mb
+        file_types:
+          - PRODUCT
+          - REVIEW
+      hevc:
+        max_file_size_in_bytes: 104_857_600 #100 mb
+        file_types:
+          - PRODUCT
+          - REVIEW
+      pdf:
+        max_file_size_in_bytes: 5_242_880 #5 mb
+        file_types:
+          - CHECK
+
   object-storage:
     host: storage.yandexcloud.net
     region: ru-central1
     bucket-name: marketplace-object-storage
+    bucket_name: marketplace-object-storage
     credentials:
       secret-key: ${SECRET_KEY}
       access-key: ${ACCESS_KEY}
-    expiration-time: 60 # in minutes
 
 spring:
   application:
     name: upload-service
+    
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://51.250.102.12:9000/oauth2/jwks
+
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 200MB
+      max-request-size: 2000MB #2 GB
+      
   data:
     mongodb:
       uri: mongodb://158.160.27.104:27017/upload-service
