--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -103,7 +103,7 @@ application:
         methods: POST, GET
       # upload-api
       - url: /*/*/*/files
-        methods: POST, GET, DELETE
+        methods: GET
       # order-api (пока нету security все эндпоинты открыты)
       - url: /*/*/*/orders/{orderId}
         methods: GET
