--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -31,7 +31,7 @@ spring:
           uri: http://172.17.0.1:9001
           predicates:
               - Path=/*/*/*/files
-              - Query=filesIds
+              - QueryParam=filesIds
       default-filters:
         - AuthFilter
 
