--- a/upload-service.yaml
+++ b/upload-service.yaml
@@ -46,36 +46,36 @@ application:
           - AVATAR
           - PRODUCT
           - REVIEW
-      mov:
-        max_file_size_in_bytes: 104_857_600 #100 mb
-        file_types:
-          - PRODUCT
-          - REVIEW
-      mp4:
-        max_file_size_in_bytes: 104_857_600 #100 mb
-        file_types:
-          - PRODUCT
-          - REVIEW
-      mkv:
-        max_file_size_in_bytes: 104_857_600 #100 mb
-        file_types:
-          - PRODUCT
-          - REVIEW
-      m4v:
-        max_file_size_in_bytes: 104_857_600 #100 mb
-        file_types:
-          - PRODUCT
-          - REVIEW
-      avi:
-        max_file_size_in_bytes: 104_857_600 #100 mb
-        file_types:
-          - PRODUCT
-          - REVIEW
-      hevc:
-        max_file_size_in_bytes: 104_857_600 #100 mb
-        file_types:
-          - PRODUCT
-          - REVIEW
+#       mov:
+#         max_file_size_in_bytes: 104_857_600 #100 mb
+#         file_types:
+#           - PRODUCT
+#           - REVIEW
+#       mp4:
+#         max_file_size_in_bytes: 104_857_600 #100 mb
+#         file_types:
+#           - PRODUCT
+#           - REVIEW
+#       mkv:
+#         max_file_size_in_bytes: 104_857_600 #100 mb
+#         file_types:
+#           - PRODUCT
+#           - REVIEW
+#       m4v:
+#         max_file_size_in_bytes: 104_857_600 #100 mb
+#         file_types:
+#           - PRODUCT
+#           - REVIEW
+#       avi:
+#         max_file_size_in_bytes: 104_857_600 #100 mb
+#         file_types:
+#           - PRODUCT
+#           - REVIEW
+#       hevc:
+#         max_file_size_in_bytes: 104_857_600 #100 mb
+#         file_types:
+#           - PRODUCT
+#           - REVIEW
       pdf:
         max_file_size_in_bytes: 5_242_880 #5 mb
         file_types:
@@ -123,13 +123,13 @@ management:
   metrics:
     tags:
       application: ${spring.application.name}
-  server:
-    port: 8030
-    ssl:
-      enabled: false
-  zipkin:
-    tracing:
-      endpoint: http://158.160.27.104:9411/api/v2/spans
+#   server:
+#     port: 8030
+#     ssl:
+#       enabled: false
+#   zipkin:
+#     tracing:
+#       endpoint: http://158.160.27.104:9411/api/v2/spans
 
 logging:
   level:
